--- a/index.html
+++ b/index.html
@@ -4,15 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name's Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+        h2 {
+            color: #444;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .project {
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to My Portfolio</h1>
     <p>Hello! I am Ayo Onakade, a data scientist and programmer. Below are my projects:</p>
 
-    <h2>Project 1</h2>
-    <p>Description of Project 1. <a href="https://github.com/yourrepo1">View on GitHub</a></p>
+    <div class="project">
+        <h2>Project 1</h2>
+        <p>Description of Project 1. <a href="https://github.com/yourrepo1">View on GitHub</a></p>
+    </div>
 
-    <h2>Project 2</h2>
-    <p>Description of Project 2. <a href="https://github.com/yourrepo2">View on GitHub</a></p>
+    <div class="project">
+        <h2>Project 2</h2>
+        <p>Description of Project 2. <a href="https://github.com/yourrepo2">View on GitHub</a></p>
+    </div>
 </body>
 </html>
+
